# turbo-test

./: .gitignore  BUG-equality-state-leak-across-shard-files.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  cli.js  index.d.ts  index.js  package-lock.json  package.json  vitest.compat.md
.github/workflows/: ci.yml
.serena/: project.yml
docs/: BACKLOG.md  COVERAGE-FUNC-BRANCH-BACKLOG.md  LAYER-B-LAZY-MODULE-STUBS.md  M0-FINDINGS.md  M1-PROGRESS.md  M2-FINDINGS.md  M3-FINDINGS.md  M4-FINDINGS.md  M5-FINDINGS.md  M6-FINDINGS.md  REUSE-REMAINING-FAILURES-IDEAS.md  RUST-PORT-EXPLORATION.md  SPEC-COVERAGE.md  TODO-cache-poisoning.md  USAGE.md  perf-handoff.md  perf-spike.md  reuse-spike.md
fixtures/battery/: b1_micro_macro_nexttick.mjs  b2_timer_delays.mjs  b3_nexttick_vs_promise.mjs  b4_async_await_interleave.mjs
fixtures/cjs/: consumer.cjs  dep-outer.cjs  lib.cjs  special.cjs
fixtures/compat/: assertions.test.ts  constructable-stylesheet.test.ts  describe-variants.test.ts  dirname-loader.ts  extend.test.ts  html-element-ctors.test.ts  itfails.test.ts  matchers.test.ts  mixed.test.ts  names.test.ts  node-dirname.test.ts  node-env.test.ts  per-test-timeout.test.ts  pragma-node.test.ts  retry.test.ts  snapshot.test.ts  timeout.test.ts
fixtures/dualreact/: cond-dep.test.ts  dual-react.test.ts  package.json  setup.ts  vitest.config.ts
fixtures/esm/: const.mjs  entry.mjs  math.mjs
fixtures/esm-ts/: entry.mts  math.ts
fixtures/interop/: entry.mjs
fixtures/jest/: jest-setup.js  jest.config.js  package.json  tsconfig.json
fixtures/napi/: bad-addon.spec.ts  bad_addon.c  survives.spec.ts
fixtures/tests/: dynamic.test.mjs  equality-undefined-strip.test.mjs  interop.test.mjs  logic.test.ts  meta.test.mjs  mock-named-rebind.test.ts  mock-outer-let.test.ts  mock.test.mjs  modifiers.test.ts  only.test.ts  spy.test.ts  timers.test.ts
fixtures/ts/: sample.ts
scripts/: conformity.mjs  npm-build.sh
scripts/perf/: README.md  accuracy-diff.sh  bench-ab.sh  bench.sh  harness.sh
src/: browser_env.js  browser_env.rs  bundler.rs  coverage.rs  coverage_branch.rs  esm_cjs.rs  graph.rs  launcher.rs  lib.rs  napi_host.rs  runner.rs  runtime.js  rust_dom.rs  transform.rs
test/: cli-compat.test.mjs  compat-api.test.mjs  compat-config-env.test.mjs  compat-jest.test.mjs  compat-napi.test.mjs  compat-reporters.test.mjs  compat-runflags.test.mjs  compat-types.test.mjs
types/: globals.d.ts  jest-globals.d.ts  turbo-test-api.d.ts  vitest.d.ts
types/typetests/: each.test-d.ts
(+26 files in other folders)
