[package]
name = "turbo-test"
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "A blazing-fast native test runner — drop-in replacement for Vitest"

[[bin]]
name = "m0-spike"
path = "src/bin/m0_spike.rs"

[[bin]]
name = "m1-esm"
path = "src/bin/m1_esm.rs"

[[bin]]
name = "m1-cjs"
path = "src/bin/m1_cjs.rs"

[[bin]]
name = "m1-transform"
path = "src/bin/m1_transform.rs"

[[bin]]
name = "turbo-test"
path = "src/bin/turbo_test.rs"

[[bin]]
name = "m5-affected"
path = "src/bin/m5_affected.rs"

[dependencies]
v8 = "149.3.0"
oxc_allocator = "0.134"
oxc_parser = "0.134"
oxc_span = "0.134"
oxc_ast = "0.134"
oxc_ast_visit = "0.134"
oxc_codegen = "0.134"
oxc_sourcemap = "7"
oxc_transformer = "0.134"
oxc_semantic = "0.134"
oxc_resolver = "11.21.0"
libloading = "0.9.0"
serde_json = "1"
base64 = "0.22"
# P3: all-Rust DOM, from the published crate (crates.io `turbo-dom`). It's a standalone crate that
# exports `rtdom` (Dom/Tree/NodeRef) unconditionally — no features needed. Kept under the
# `turbo_dom_parser` import name via `package` so the existing `use turbo_dom_parser::rtdom::…` stands.
# 0.3.4 adds native CharacterData mutation + ChildNode/ParentNode manip + insertAdjacent + toggleAttribute + getAttributeNS over rtdom.
# 0.3.5 fixes rtdom::serialize escaping regular spaces to &nbsp; (U+00A0), which broke
# whitespace-normalized getByRole/getByText/toHaveText matching against a serialized DOM.
turbo-dom-parser = { package = "turbo-dom", version = "0.3.5" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
